[package]
name = "hivebus"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hivebus"
path = "src/main.rs"

[dependencies]
proto      = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
bincode    = { workspace = true }
toml       = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
nix        = { workspace = true }
bytes      = { workspace = true }
socket2    = { workspace = true }
libc       = "0.2"
