[package]
name = "hivectl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TUI cluster inspector for hivebus hivebus"

[[bin]]
name = "hv-hivectl"
path = "src/main.rs"

[dependencies]
proto     = { path = "../proto" }
anyhow    = { workspace = true }

ratatui   = "0.29"
crossterm = "0.28"
