[package]
name = "netgate"
version.workspace = true
edition.workspace = true

[[bin]]
name = "netgate"
path = "src/main.rs"

[dependencies]
proto      = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
bincode    = { workspace = true }
toml       = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
bytes      = { workspace = true }
# Internal DNS server
hickory-server  = "0.25"
hickory-proto   = "0.25"
# TUN interface
tun        = { version = "0.7", features = ["async"] }
