[package]
name = "netop"
version.workspace = true
edition.workspace = true

[[bin]]
name = "netop"
path = "src/main.rs"

[dependencies]
proto      = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
bincode    = { workspace = true }
toml       = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
bytes      = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix        = { workspace = true }
nftables   = "0.6"
rtnetlink  = "0.14"
