[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
proto      = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
bincode    = { workspace = true }
toml       = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
bytes      = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix        = { workspace = true }
libc       = "0.2"
kvm-ioctls = "0.23"
cgroups-rs = "0.3"
