[package]
name = "pxeboot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pxeboot"
path = "src/main.rs"

[dependencies]
proto      = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
bincode    = { workspace = true }
toml       = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
bytes      = { workspace = true }
socket2    = { workspace = true }
# Packet parsing for MAC address extraction
pnet       = "0.35"
# TFTP server
async-tftp = "0.4"
